# data-collector

./: CMakeLists.txt  Main.qml  main.cpp  mobilitydata.cpp  mobilitydata.h  qml.qrc
components/: DataField.qml
